WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195639
[iOS] Input view sometimes flickers when blurring and refocusing an element
https://bugs.webkit.org/show_bug.cgi?id=195639
Summary
[iOS] Input view sometimes flickers when blurring and refocusing an element
Wenson Hsieh
Reported
2019-03-12 13:14:25 PDT
<
rdar://problem/48735337
>
Attachments
Patch
(22.53 KB, patch)
2019-03-12 13:59 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(22.54 KB, patch)
2019-03-12 14:02 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix WPE/GTK
(22.78 KB, patch)
2019-03-12 14:25 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-03-12 13:59:56 PDT
Comment hidden (obsolete)
Created
attachment 364440
[details]
Patch
Wenson Hsieh
Comment 2
2019-03-12 14:02:46 PDT
Comment hidden (obsolete)
Created
attachment 364442
[details]
Patch
Wenson Hsieh
Comment 3
2019-03-12 14:25:08 PDT
Created
attachment 364446
[details]
Fix WPE/GTK
WebKit Commit Bot
Comment 4
2019-03-12 16:52:02 PDT
Comment on
attachment 364446
[details]
Fix WPE/GTK Clearing flags on attachment: 364446 Committed
r242833
: <
https://trac.webkit.org/changeset/242833
>
WebKit Commit Bot
Comment 5
2019-03-12 16:52:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug